Ready to release (still requires gradle stuff)